samples/_failures_safe/1761086710_d74e95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08d38e25.c: In function ‘main’:
./samples/SAFE/__tmp_08d38e25.c:146:29: error: expected ‘)’ at end of input
  146 |         destroy_matrix(&matA
      |                       ~     ^
      |                             )
./samples/SAFE/__tmp_08d38e25.c:146:9: error: expected declaration or statement at end of input
  146 |         destroy_matrix(&matA
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_08d38e25.c:146:9: error: expected declaration or statement at end of input
